# cobrowser

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  proxy.txt  pyproject.toml
.github/workflows/: deploy.yml
cobrowser/: __init__.py
cobrowser/api/: main.py  routes.py
cobrowser/api/sessions/: user123_session.json
cobrowser/config/: settings.py
cobrowser/policy/: decider.py
cobrowser/tasks/: instagram_tasks.py
cobrowser/tests/: test_api.py
sessions/: user123_session.json
src/: excutor.py  executor.py  interfaces.py  validator.py
